--- a/CSS/gioithieu.css
+++ b/CSS/gioithieu.css
@@ -133,7 +133,7 @@ nav a:hover {
 .main-content {
     padding: 2rem;
     min-height: 60vh;
-    background-color: #fdd9d9;
+    background-color: #d4caca9d;
 }
 
 .main-content h4 {
